can click anywhere for next on task 1

--- a/extra/instructions.html
+++ b/extra/instructions.html
@@ -14,8 +14,9 @@ is still in the same place (for now), so it gives you the gory details.
 </p>
 
 <p>The short version: go to the <a href='/t/23/04/IQ/front/menuMain.php'>main menu</a>.  Select a task, numbers 1 - 5.  For the first task, you 
-first read the question then click to get the possible answers.  For all tasks, click one of the blue-background answers.  If you're in immediate 
-feedback mode, click within the larger question-answer box (but preferably not on an answer) to proceed to the next question.
+first read the question then click to get the possible answers.  For all tasks, click one of the 
+darker-blue-background answers.  If you're in immediate feedback mode, 
+click anywhere on the screen (but preferably not on an answer) to proceed to the next question.
 </p>
 
 <p>To change tasks or see the results of all questions, hover over the far right of the screen.  </p>
